--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -160,4 +160,58 @@
 
 </div>
 
+<!-- <form>
+    <h2 class="text-center mb-5 titreDemandeLocation">Demande de location matériel</h2>
+    <h3 class="mb-3">Informations personnelles</h3>
+      <div class="form-row">
+        <div class="row">
+          <div class="col-lg-4 mb-3">
+            <label for="validationDefault01">Nom*</label>
+            <input type="text" class="form-control" id="validationDefault01" required>
+          </div>
+          <div class="col-lg-4 mb-3">
+            <label for="validationDefault02">Prenom*</label>
+            <input type="text" class="form-control" id="validationDefault02" required>
+          </div>
+          <div class="col-lg-3 mb-3">
+            <label for="validationDefault01">Date de naissance*</label>
+            <input type="date" class="form-control" id="validationDefault01" required>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 mb-3">
+            <label for="validationDefault02">Adresse*</label>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="Numéro et nom de rue" required>
+          </div>
+          <div class="col-lg-3 mb-3">
+            <label for="validationDefault03">Ville*</label>
+            <input type="text" class="form-control" id="validationDefault03" required>
+          </div>
+          <div class="col-lg-3 mb-3">
+            <label for="validationDefault05">Code postal*</label>
+            <input type="text" class="form-control" id="validationDefault05" required>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 mb-3">
+            <label for="validationDefaultUsername">Mail*</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupPrepend2">@</span>
+              </div>
+              <input type="text" class="form-control" id="validationDefaultUsername" placeholder="exemple@gmail.com" aria-describedby="inputGroupPrepend2" required>
+            </div>
+          </div>
+          <div class="col-lg-3 mb-3">
+            <label>Veuillez choisir votre statut...</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected></option>
+              <option value="1">Etudiant</option>
+              <option value="2">Intervenant</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      </form> -->
+
 
