--- a/src/app/page-etudiant/page-etudiant.component.html
+++ b/src/app/page-etudiant/page-etudiant.component.html
@@ -89,19 +89,6 @@
       </div>
 
       <div class="row d-flex justify-content-center">
-        <div class="col-lg-4 mb-3">
-          <p>Sélectionnez le lieu d'utilisation du materiel*</p>
-          <mat-form-field appearance="fill">
-            <mat-label>Lieu d'utilisation</mat-label>
-            <mat-select formControlName="lieu" [(ngModel)]="idLieuUtilisation"> <!-- Permet d'ajouter id présent dans value à data pour l'envoyer en post -->
-              <mat-option *ngFor="let lieu of listeLieuxUtilisation" [value]=lieu.idLieu>{{ lieu.nomLieuUtilisation}}</mat-option> <!-- [value] permet de récupérer directement la valeur de l'objet -->
-            </mat-select>
-            <mat-error *ngIf="formControl.get('modele')?.hasError('required')"> 
-              Le lieu est <strong>obligatoire</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-
         <div class="col-lg-3 mb-3">
           <p>Sélectionnez le cadre d'utilisation du materiel*</p>
           <mat-form-field appearance="fill">
@@ -115,7 +102,6 @@
           </mat-form-field>
         </div>
       </div>
-
 
       <h3 class="mb-3 mt-4">Dates de réservation</h3>
         <div class="form-row">
@@ -154,7 +140,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-          <button class="btn boutonFormulaire mb-5" type="submit" (click)="envoyerFormulaire()">Envoyer</button>
+          <button class="btn boutonFormulaire mb-5" [disabled]="!this.formControl.valid" type="submit" (click)="envoyerFormulaire()">Envoyer</button>
         </div>
   </form>
   <br><br>
