--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -8,7 +8,7 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Nouvelles demandes</h5>
+                        <h4 class="card-title">Nouvelles demandes</h4>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -16,7 +16,7 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Retour de stock</h5>
+                        <h4 class="card-title">Retour de stock</h4>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Matériel défectueux</h5>
+                        <h4 class="card-title">Matériel défectueux</h4>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3 ">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Matériel disponible/lieux</h5>
+                        <h4 class="card-title">Matériel disponible/lieux</h4>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Matériel en prêt</h5>
+                        <h4 class="card-title">Matériel en prêt</h4>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -52,50 +52,64 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Matériel en retard</h5>
+                        <h4 class="card-title">Matériel en retard</h4>
                         <p class="card-text"></p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <button class="btnEnregistrer btn-lg px-4" type="submit" href="#">Enregistrer une réservation</button>
+        <div class="d-flex justify-content-center">
+            <button class="btnEnregistrer btn-lg px-4" type="submit">Enregistrer une réservation</button>
+        </div>
+
 
         <div class="titre">
-            <h1>Suivi des locations</h1>
+            <h2>Suivi des locations</h2>
         </div>
 
-        <h2>Nouvelles demandes de prêts</h2>
-        <!-- -------------------------------------Tableau nouvelle demande---------------------- -->
+        <h3>Nouvelles demandes de prêts</h3>
+        <!-- -------------------------------------Tableau nouvelle demande de prêt---------------------- -->
         <table class="table table-light">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
+                    <!-- <th scope="col">#</th> -->
                     <th scope="col">Nom</th>
                     <th scope="col">Prénom</th>
+                    <th scope="col">Mail</th>
                     <th scope="col">Statut</th>
-                    <th scope="col">Matériel demandé</th>
                     <th scope="col">Date d'emprunt</th>
+                    <th scope="col">Date retour</th>
+                    <th scope="col">Type matériel</th>
+                    <th scope="col">Modèle</th>
+                    <th scope="col">Numéro de série</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>Etudiant</td>
-                    <td>Ordinateur</td>
-                    <td>23-06-20222</td>
+                <tr *ngFor="let liste of listeDemandesEmprunt">
+                    <!-- <td>{{ liste.idEmprunt }} </td> -->
+                    <td>{{ liste.utilisateur.nom }} </td>
+                    <td>{{ liste.utilisateur.prenom }}</td>
+                    <td>{{ liste.utilisateur.mail }}</td>
+                    <td>{{ liste.utilisateur.statut.role }}</td>
+                    <td>{{ liste.dateEmprunt | date:'d/MM/yyyy' }}</td>
+                    <td>{{ liste.dateRetour | date:'d/MM/yyyy' }}</td>
+                    <td>{{ liste.materiel.modele.typeMateriel.nomType }}</td>
+                    <td>{{ liste.materiel.modele.nomModele }}</td>
+                    <td>{{ liste.materiel.numeroSerie }}</td>
+                    <!-- <td><input type="text" value="{{ liste.materiel.numeroSerie }}"></td> -->
+
                     <td>
-                        <a type="submit" class="btn btn-outline-success" href="#" role="button">Valider</a>
+                        <a type="submit" class="btn btn-outline-success" role="button" (click)="validerDemandeEmprunt(liste.idEmprunt)">Valider</a>
+                        <a type="submit" class="btn btn-outline-warning" href="#" role="button">Modifier</a>
                         <a type="submit" class="btn btn-outline-danger" href="#" role="button">Supprimer</a>
                     </td>
                 </tr>
             </tbody>
         </table>
 
-        <h2>Retour de prêt du matériel</h2>
+        <h3>Retour de prêt du matériel</h3>
         <!-- -----------------------------------------Tableau retour prêt ---------------------- -->
         <table class="table table-light">
             <thead>
@@ -104,7 +118,7 @@
                     <th scope="col">Nom</th>
                     <th scope="col">Prénom</th>
                     <th scope="col">Statut</th>
-                    <th scope="col">Etat</th>
+                    <th scope="col">Etat matériel&emsp;</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -113,9 +127,9 @@
                     <th scope="row">1</th>
                     <td>Mark</td>
                     <td>Otto</td>
-                    <td>@mdo</td>
                     <td>Opérationnel</td>
-                    
+                    <td>Opérationnel</td>
+
                     <td>
                         <a type="submit" class="btn btn-outline-success" href="#" role="button">Valider</a>
                         <a type="submit" class="btn btn-outline-danger" href="#" role="button">Supprimer</a>
@@ -124,7 +138,161 @@
             </tbody>
         </table>
 
-        <h1>Gestion du parc</h1>
+        <!-- -----------------------------------Création de compte ---------------------- -->
+
+        <div class="pageGestionnaire">
+            <div class="container">
+
+                <form [formGroup]="formControl" #registerFrom="ngForm"
+                    (ngSubmit)="donneesFormulaire(registerFrom.value)">
+                    <h2 class="text-center text-black mb-5">Création de compte Utilisateur</h2>
+                    <h3 class="mb-3">Informations personnelles</h3>
+                    <div class="form-row">
+                        <div class="row">
+                            <div class="col-lg-4 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Nom*</label>
+                                    <input type="text" class="form-control" required ngModel formControlName="nom"
+                                        matInput>
+                                    <mat-error *ngIf="formControl.get('nom')?.hasError('required')">
+                                        Le nom est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Prénom*</label>
+                                    <input type="text" class="form-control" required ngModel formControlName="prenom"
+                                        matInput>
+                                    <mat-error *ngIf="formControl.get('prenom')?.hasError('required')">
+                                        Le prénom est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-3 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Choisir votre mot de passe*</label>
+                                    <input type="password" class="form-control" required ngModel
+                                        formControlName="motDePasse" matInput>
+                                    <mat-error *ngIf="formControl.get('motDePasse')?.hasError('required')">
+                                        Le mot de passe est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Adresse*</label>
+                                    <input type="text" class="form-control" placeholder="Numéro et nom de rue" required
+                                        ngModel formControlName="adresse" matInput>
+                                    <mat-error *ngIf="formControl.get('adresse')?.hasError('required')">
+                                        L'adresse est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-3 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Ville*</label>
+                                    <input type="text" class="form-control" required ngModel formControlName="ville"
+                                        matInput>
+                                    <mat-error *ngIf="formControl.get('ville')?.hasError('required')">
+                                        La ville est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-3 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Code postal*</label>
+                                    <input type="text" class="form-control" required ngModel
+                                        formControlName="codePostale" matInput>
+                                    <mat-error *ngIf="formControl.get('codePostale')?.hasError('required')">
+                                        Le code postale est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Mail*</label>
+                                    <input type="text" class="form-control" placeholder="exemple@gmail.com" required
+                                        ngModel formControlName="mail" matInput>
+                                    <mat-error *ngIf="formControl.get('mail')?.hasError('required')">
+                                        Le mail est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="col-lg-3 mb-3">
+                                <mat-form-field appearance="fill">
+                                    <label>Numéro de téléphone*</label>
+                                    <input type="tel" class="form-control" required ngModel formControlName="numeroTelephone"
+                                        matInput>
+                                    <mat-error *ngIf="formControl.get('numeroTelephone')?.hasError('required')">
+                                        Le numéro de téléphone est <strong>obligatoire</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="col-lg-3 mb-3">
+                                <form [formGroup]="contactForm" (ngSubmit)="submitListe()">
+                                    <label>Veuillez choisir votre statut...</label>
+                                    <select formControlName="statutUtilisateur" class="form-select"
+                                        aria-label="Default select example">
+                                        <option [ngValue]="null" selected></option>
+                                        <option *ngFor="let statut of statutUtilisateur" [ngValue]="statut.name">
+                                            {{statut.name}}</option>
+
+                                    </select>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                        <button class="btn boutonFormulaire mb-5" type="submit">Envoyer</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+        <h2 class="titreGestion">Gestion du parc</h2>
+
+        <!-- -----------------------------------Filtre de recherche Gestion du Parc ---------------------- -->
+        <div class="filtre">
+            <div class="col-lg-3 mb-5">
+                <input type="date" class="form-control" id="validationDefault01" required>
+            </div>
+            <div class="col-lg-3 mb-3">
+
+
+                <select class="form-select" aria-label="Default select example">
+                    <option class="espace" selected>Sélectionner un matériel</option>
+                    <option class="espace"></option>
+                    <option class="espace" value="1">Pc</option>
+                    <option class="espace" value="2">Casque VR</option>
+                    <option class="espace" value="3">Webcam</option>
+                    <option class="espace" value="4">Projecteur</option>
+                </select>
+            </div>
+
+            <div class="col-lg-3 mb-3">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Sélectionner le lieu</option>
+                    <option></option>
+                    <option value="1">MNS</option>
+                    <option value="2">IFA</option>
+                </select>
+            </div>
+        </div>
+
+
+
+        <div class="d-flex justify-content-center">
+            <button class="btnRechercher btn-lg px-4" type="submit">Rechercher</button>
+        </div>
 
         <!-- -----------------------------------------Tableau Gestion du Parc ---------------------- -->
 
@@ -142,76 +310,16 @@
             <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
+                    <td>Disponible 60</td>
+                    <td>Emprunté par élève</td>
+                    <td>Emprunté</td>
+                    <td>Pilotes d'installations</td>
                     <td>@mdo</td>
                 </tr>
             </tbody>
         </table>
-
-
-
+        <br>
+        <br>
 
     </div>
-    
-
-
 </div>
-
-<!-- <form>
-    <h2 class="text-center mb-5 titreDemandeLocation">Demande de location matériel</h2>
-    <h3 class="mb-3">Informations personnelles</h3>
-      <div class="form-row">
-        <div class="row">
-          <div class="col-lg-4 mb-3">
-            <label for="validationDefault01">Nom*</label>
-            <input type="text" class="form-control" id="validationDefault01" required>
-          </div>
-          <div class="col-lg-4 mb-3">
-            <label for="validationDefault02">Prenom*</label>
-            <input type="text" class="form-control" id="validationDefault02" required>
-          </div>
-          <div class="col-lg-3 mb-3">
-            <label for="validationDefault01">Date de naissance*</label>
-            <input type="date" class="form-control" id="validationDefault01" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 mb-3">
-            <label for="validationDefault02">Adresse*</label>
-            <input type="text" class="form-control" id="validationDefault02" placeholder="Numéro et nom de rue" required>
-          </div>
-          <div class="col-lg-3 mb-3">
-            <label for="validationDefault03">Ville*</label>
-            <input type="text" class="form-control" id="validationDefault03" required>
-          </div>
-          <div class="col-lg-3 mb-3">
-            <label for="validationDefault05">Code postal*</label>
-            <input type="text" class="form-control" id="validationDefault05" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 mb-3">
-            <label for="validationDefaultUsername">Mail*</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroupPrepend2">@</span>
-              </div>
-              <input type="text" class="form-control" id="validationDefaultUsername" placeholder="exemple@gmail.com" aria-describedby="inputGroupPrepend2" required>
-            </div>
-          </div>
-          <div class="col-lg-3 mb-3">
-            <label>Veuillez choisir votre statut...</label>
-            <select class="form-select" aria-label="Default select example">
-              <option selected></option>
-              <option value="1">Etudiant</option>
-              <option value="2">Intervenant</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      </form> -->
-
-
