--- a/src/app/page-gestionnaire/page-gestionnaire.component.scss
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.scss
@@ -1,7 +1,6 @@
+
 .page-gestionnaire{
     background-color: #1F2641 ;
-    margin-top: 100px;
-    padding: 150px;
 }
 
 .titre {
@@ -9,14 +8,28 @@
 }
 
 h1{
+    font-size: 35px;
+    font-weight: bolder;
     text-align: center;
     color: white;
     margin-bottom: 50px;
+    margin-top: 150px;
 }
 
 h2{
+    font-size: 35px;
+    font-weight: bolder;
     text-align: center;
     color: white;
+    margin-top: 70px;
+    margin-bottom: 40px;
+}
+
+h3{
+    font-size: 25px;
+    font-weight: bold;
+    text-align: left;
+    color: #E9731D;
     margin-top: 30px;
     margin-bottom: 20px;
 }
@@ -33,8 +46,68 @@ h2{
     margin-top: 30px;
 }
 
+.btnEnregistrer:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    
+}
+
+//-------------------------Bouton Rechercher---------------------
+.btnRechercher{
+    background-color: #E9731D;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-bottom: 50px;
+}
+
+.btnRechercher:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    
+}
+
 //-------------------------Bouton Valider/Supprimer Demande de prêt---------------------
 .btn{
     margin-left: 15px;
-
 }
+
+
+
+//------------------------Date et Filtre de recherche----------------------------------
+.filtre{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
+//---------------------- Création de compte----------------------------------------
+
+.boutonFormulaire{
+    background-color: #E9731D;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 20px;
+}
+
+form{
+    background-color: white;
+    margin-top: 100px;
+    padding: 30px;
+    border-radius: 30px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+h2{
+    font-size: 35px;
+    margin-top: 20px;
+}
+
+
