--- a/src/app/page-gestionnaire/page-gestionnaire.component.scss
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.scss
@@ -110,4 +110,18 @@ h2{
     margin-top: 20px;
 }
 
+.iconInfo{
+    margin-right: 10px;
+}
+
+.iconClose{
+    //margin-left: auto; voir responsive
+    margin-left: 40px;
+}
+
+.messageValidation{
+    display: flex;
+    justify-content: start;
+    align-items: flex-end;
+}
 
