--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -70,6 +70,22 @@
 
         <h3>Nouvelles demandes de prêts</h3>
         <!-- -------------------------------------Tableau nouvelle demande de prêt---------------------- -->
+        
+        <ng-container *ngIf="messageValidationDemandeEmprunt" >
+            <div class="alert alert-success messageValidation d-flex justify-content-center">
+              <mat-icon class="iconInfo">check_circle</mat-icon>
+              <span>{{ messageValidationDemandeEmprunt }}</span>
+              <mat-icon class="iconClose" (click)="cacherMessage()">close</mat-icon>
+            </div>
+          </ng-container>
+          <ng-container *ngIf="messageErreurValidationDemandeEmprunt">
+            <div class="alert alert-danger messageValidation d-flex justify-content-center">
+              <mat-icon class="iconInfo">error</mat-icon>
+              {{ messageErreurValidationDemandeEmprunt }}
+              <mat-icon class="iconClose" (click)="cacherMessage()">close</mat-icon>
+            </div>
+          </ng-container>
+        
         <table class="table table-light">
             <thead>
                 <tr>
@@ -78,32 +94,29 @@
                     <th scope="col">Prénom</th>
                     <th scope="col">Mail</th>
                     <th scope="col">Statut</th>
-                    <th scope="col">Date d'emprunt</th>
-                    <th scope="col">Date retour</th>
                     <th scope="col">Type matériel</th>
                     <th scope="col">Modèle</th>
                     <th scope="col">Numéro de série</th>
+                    <th scope="col">Date d'emprunt</th>
+                    <th scope="col">Date retour</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let liste of listeDemandesEmprunt">
-                    <!-- <td>{{ liste.idEmprunt }} </td> -->
                     <td>{{ liste.utilisateur.nom }} </td>
                     <td>{{ liste.utilisateur.prenom }}</td>
                     <td>{{ liste.utilisateur.mail }}</td>
                     <td>{{ liste.utilisateur.statut.role }}</td>
-                    <td>{{ liste.dateEmprunt | date:'d/MM/yyyy' }}</td>
-                    <td>{{ liste.dateRetour | date:'d/MM/yyyy' }}</td>
                     <td>{{ liste.materiel.modele.typeMateriel.nomType }}</td>
                     <td>{{ liste.materiel.modele.nomModele }}</td>
                     <td>{{ liste.materiel.numeroSerie }}</td>
-                    <!-- <td><input type="text" value="{{ liste.materiel.numeroSerie }}"></td> -->
+                    <td>{{ liste.dateEmprunt | date:'d/MM/yyyy' }}</td>
+                    <td>{{ liste.dateRetour | date:'d/MM/yyyy' }}</td>
 
                     <td>
                         <a type="submit" class="btn btn-outline-success" role="button" (click)="validerDemandeEmprunt(liste.idEmprunt)">Valider</a>
-                        <a type="submit" class="btn btn-outline-warning" href="#" role="button">Modifier</a>
-                        <a type="submit" class="btn btn-outline-danger" href="#" role="button">Supprimer</a>
+                        <a type="submit" class="btn btn-outline-danger"  role="button" (click)="supprimerDemandeEmprunt(liste.idEmprunt)">Supprimer</a>
                     </td>
                 </tr>
             </tbody>
