--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" [routerLink]="['accueil']" [routerLinkActive]="['active']">Accueil</a>
-            <a class="nav-link" [routerLink]="['page-etudiant']" [routerLinkActive]="['active']">Tableau de bord</a>
+            <a class="nav-link" [routerLink]="['page-etudiant']" [routerLinkActive]="['active']" *ngIf="!lienTableauBord">Tableau de bord</a>
+            <a class="nav-link" [routerLink]="['page-gestionnaire']" [routerLinkActive]="['active']" *ngIf="lienTableauBord">Tableau de bord</a>
             <a class="nav-link" [routerLink]="['contact']" [routerLinkActive]="['active']">Contact</a>
           </div>
         </div>
