--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -8,24 +8,24 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Nouvelles demandes</h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">Demandes d'emprunt</h4>
+                        <p class="card-text demandesUtilisateur">{{ nombreDemandesEmprunt }} </p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Retour de stock</h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">Demandes de retour</h4>
+                        <p class="card-text demandesUtilisateur">{{ nombreRetoursEmprunt }}</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Matériel défectueux</h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">Demandes prolongation</h4>
+                        <p class="card-text demandesUtilisateur">{{ nombreProlongationEmprunt }}</p>
                     </div>
                 </div>
             </div>
@@ -36,33 +36,28 @@
             <div class="col-12 col-md-6 col-lg-4 mb-3 ">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Matériel disponible/lieux</h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">Matériel(s) en stock (opérationnel)</h4>
+                        <p class="card-text demandesUtilisateur">{{ nombreMaterielOperationnel }}</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Matériel en prêt</h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">Matériel(s) défectueux</h4>
+                        <p class="card-text demandesUtilisateur"> {{ nombreMaterielDefectueux }}</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Matériel en retard</h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">Matériel(s) en retard</h4>
+                        <p class="card-text demandesUtilisateur">{{ nombreMaterielRetard }}</p>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="d-flex justify-content-center">
-            <button class="btnEnregistrer btn-lg px-4" type="submit">Enregistrer une réservation</button>
-        </div>
-
 
         <div class="titre">
             <h2>Suivi des locations</h2>
@@ -163,7 +158,7 @@
                     <td>{{ liste.materiel.modele.typeMateriel.nomType }}</td>
                     <td>{{ liste.materiel.modele.nomModele }}</td>
                     <td>{{ liste.materiel.numeroSerie }}</td>
-                    <td>{{ liste.dateRetour | date:'d/MM/yyyy' }}</td>
+                    <td class="datePrevue">{{ liste.dateRetour | date:'d/MM/yyyy' }}</td>
                     <td class="dateRetoursouhaité">{{ liste.dateDemandeRetour | date:'d/MM/yyyy' }}</td>
 
                     <td>
@@ -173,6 +168,66 @@
                 </tr>
             </tbody>
         </table>
+
+        <!-- -----------------------------------------Tableau prolongation prêt ---------------------- -->
+
+        <h3>Demandes de prolongation</h3>
+
+        <ng-container *ngIf="messageValidationProlongationEmprunt" >
+            <div class="alert alert-success messageValidation d-flex justify-content-center">
+              <mat-icon class="iconInfo">check_circle</mat-icon>
+              <span>{{ messageValidationProlongationEmprunt }}</span>
+              <mat-icon class="iconClose" (click)="cacherMessage()">close</mat-icon>
+            </div>
+          </ng-container>
+          <ng-container *ngIf="messageErreurValidationProlongationEmprunt">
+            <div class="alert alert-danger messageValidation d-flex justify-content-center">
+              <mat-icon class="iconInfo">error</mat-icon>
+              {{ messageErreurValidationProlongationEmprunt }}
+              <mat-icon class="iconClose" (click)="cacherMessage()">close</mat-icon>
+            </div>
+          </ng-container>
+        
+        <table class="table table-light">
+            <thead>
+                <tr>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Prénom</th>
+                    <th scope="col">Mail</th>
+                    <th scope="col">Type matériel</th>
+                    <th scope="col">Modèle</th>
+                    <th scope="col">Numéro de série</th>
+                    <th scope="col">Date retour initiale</th>
+                    <th scope="col">Date retour souhaitée</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let liste of listeProlongationEmprunt">
+                    <td>{{ liste.utilisateur.nom }} </td>
+                    <td>{{ liste.utilisateur.prenom }}</td>
+                    <td>{{ liste.utilisateur.mail }}</td>
+                    <td>{{ liste.materiel.modele.typeMateriel.nomType }}</td>
+                    <td>{{ liste.materiel.modele.nomModele }}</td>
+                    <td>{{ liste.materiel.numeroSerie }}</td>
+                    <td class="datePrevue">{{ liste.dateRetour | date:'d/MM/yyyy' }}</td>
+                    <td class="dateRetoursouhaité">{{ liste.dateProlongation | date:'d/MM/yyyy' }}</td>
+
+                    <td>
+                        <a type="submit" class="btn btn-outline-success" role="button" (click)="validerProlongationEmprunt(liste.idEmprunt)">Valider</a>
+                        <a type="submit" class="btn btn-outline-danger"  role="button" (click)="supprimerProlongationEmprunt(liste.idEmprunt)">Supprimer</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div class="titre">
+            <h2>Réservation</h2>
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <button class="btnEnregistrer btn-lg px-4" type="submit">Enregistrer une réservation</button>
+        </div>
 
         <!-- -----------------------------------Création de compte ---------------------- -->
 
