--- a/src/app/page-gestionnaire/page-gestionnaire.component.scss
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.scss
@@ -111,6 +111,23 @@ h2{
 }
 
 
+// Pop-up création de compte
+
+.iconInfo{
+    margin-right: 10px;
+}
+
+.iconClose{
+    //margin-left: auto; voir responsive
+    margin-left: 40px;
+}
+
+.messageValidation{
+    display: flex;
+    justify-content: start;
+    align-items: flex-end;
+}
+
 
 
 
