Mise en place diese sur url pour rester sur page lors raffraichissement

--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -81,7 +81,7 @@
             </div>
           </ng-container>
         
-        <table class="table table-light">
+        <table class="table table-light overflow-auto">
             <thead>
                 <tr>
                     <!-- <th scope="col">#</th> -->
