Ajout des guides d'utilisations dans Page Accueil

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -13,6 +13,7 @@
                                 <li>Disque dur: 256 Go SSD</li>
                                 <li>Processeur: Intel Core i5-1135G7 </li>
                                 <li>Logiciels et pilotes: Windows</li>
+                                <li> <a href="https://pcsupport.lenovo.com/ht/fr/products/laptops-and-netbooks/lenovo-v-series-laptops/v15-g2-itl" target="_blank">Guide d'utilisation</a></li>
                             </ul>
                     </div>
                 </div>
@@ -26,6 +27,7 @@
                             <li>Modèle: Oculus Quest 2</li>
                             <li>Connectivité: HDMI, USB 2.0, USB 3.0</li>
                             <li>Ecran: Oled</li>
+                            <li> <a href="https://manuals.plus/fr/logitech/logitech-oculus-quest-2-pro-gaming-headset-manual#axzz7Vtfz1pLS" target="_blank">Guide d'utilisation</a></li>
                         </ul>
                     </div>
                 </div>
@@ -42,6 +44,7 @@
                             <li>Modèle: Webcam C920 HD pro</li>
                             <li>Résolution: 15 mégapixels</li>
                             <li>Poids: 800 grammes</li>
+                            <li> <a href="https://manuals.plus/fr/logitech/c920-hd-pro-webcam-manual#axzz7Vtfz1pLS" target="_blank">Guide d'utilisation</a></li>
                         </ul>
                     </div>
                 </div>
@@ -55,6 +58,7 @@
                             <li>Modèle: Epson EB-685wi</li>
                             <li>Connectivité: VGA, USB, Ethernet, HDMI</li>
                             <li>Résolution: 1280 * 800</li>
+                            <li> <a href="https://files.support.epson.com/docid/cpd5/cpd50664.pdf" target="_blank">Guide d'utilisation</a></li>
                         </ul>
                     </div>
                 </div>
